part1/src/apyc-parser.output
Terminals unused in grammar

   "@println"
   EMPTY
   "@expr_list"
   "@module"
   "@binop"
   "@unop"
   "@stmt_list"
   "@print"
   "@return"
   "@break"
   "@continue"
   "@native"
   "@if"
   "@for"
   "@while"
   "@block"
   "@assign"
   "@target_list"
   "@attributeref"
   "@subscription"
   "@slicing"
   "@type"
   "@typed_id"
   "@type_list"
   "@type_formals_list"
   "@formals_list"
   "@function_type"
   "@def"
   "@class"
   "@compare"
   "@left_compare"
   "@and"
   "@or"
   "@if_expr"
   "@tuple"
   "@list_display"
   "@dict_display"
   "@pair"
   "@call"
   "&&"
   "||"
   BADSTRING
   BLANK_LINE
   END_OF_FILE
   INDENTATION
   UNUSED_KEYWORD


State 51 conflicts: 4 reduce/reduce
State 198 conflicts: 1 reduce/reduce
State 227 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: __13
    3          | %empty

    4 stmt_list0: __15
    5           | %empty

    6 statement: basic_statement

    7 classdef: "class" ID "of" "[" type_formals "]" ":" NEWLINE INDENT block DEDENT
    8         | "class" ID ":" NEWLINE INDENT block DEDENT
    9         | "class" ID "of" "[" type_formals "]" ":" semi_block NEWLINE
   10         | "class" ID ":" semi_block NEWLINE

   11 type_formals: type_var __28

   12 definition: "def" ID "(" formals ")" "::" type ":" NEWLINE INDENT block DEDENT
   13           | "def" ID "(" formals ")" ":" NEWLINE INDENT block DEDENT
   14           | "def" ID "(" formals ")" "::" type ":" semi_block NEWLINE
   15           | "def" ID "(" formals ")" ":" semi_block NEWLINE
   16           | "def" ID "(" formals ")" ":" native_stmt __34 NEWLINE
   17           | "def" ID "(" formals ")" ":" NEWLINE INDENT native_stmt __35 NEWLINE DEDENT
   18           | "def" ID "(" formals ")" "::" type ":" native_stmt __36 NEWLINE
   19           | "def" ID "(" formals ")" "::" type ":" NEWLINE INDENT native_stmt __29 NEWLINE DEDENT

   20 formals: __8 __16 __18
   21        | %empty

   22 block: __14
   23      | %empty

   24 semi_block: statement __26 __19

   25 basic_statement: print_stmt
   26                | assign
   27                | expression
   28                | "pass"
   29                | "return" expression0
   30                | "break"
   31                | "continue"

   32 control_structure: for_loop
   33                  | while_loop
   34                  | if_stmt

   35 semi_stmt_list: statement __26 __19

   36 for_loop: "for" target_list "in" tuple_ext_expr ":" semi_stmt_list NEWLINE
   37         | "for" target_list "in" tuple_ext_expr ":" NEWLINE INDENT stmt_list0 DEDENT
   38         | "for" target_list "in" tuple_ext_expr ":" NEWLINE INDENT stmt_list0 DEDENT else_stmt

   39 while_loop: "while" expression ":" semi_stmt_list NEWLINE
   40           | "while" expression ":" NEWLINE INDENT stmt_list0 DEDENT
   41           | "while" expression ":" NEWLINE INDENT stmt_list0 DEDENT else_stmt

   42 if_stmt: "if" expression ":" semi_stmt_list NEWLINE
   43        | "if" expression ":" semi_stmt_list NEWLINE elif_stmts
   44        | "if" expression ":" NEWLINE INDENT stmt_list0 DEDENT
   45        | "if" expression ":" NEWLINE INDENT stmt_list0 DEDENT elif_stmts

   46 elif_stmts: else_stmt
   47           | "elif" expression ":" semi_stmt_list NEWLINE
   48           | "elif" expression ":" semi_stmt_list NEWLINE elif_stmts
   49           | "elif" expression ":" NEWLINE INDENT stmt_list0 DEDENT elif_stmts
   50           | "elif" expression ":" NEWLINE INDENT stmt_list0 DEDENT

   51 else_stmt: "else" ":" semi_stmt_list NEWLINE
   52          | "else" ":" NEWLINE INDENT stmt_list0 DEDENT

   53 native_stmt: "native" STRING

   54 print_stmt: "print" ">>" expression
   55           | "print" ">>" expression "," expression_list
   56           | "print" ">>" expression "," plist
   57           | "print" expression_list0
   58           | "print" plist

   59 assign: target_list "=" right_side

   60 target_list: target
   61            | target ","
   62            | tlist
   63            | target __9
   64            | "(" target_list ")"
   65            | target_list_br

   66 target_list_br: "[" tlist "]"
   67               | "[" target __32 "]"
   68               | "[" target __10 "]"

   69 tlist: target __9 ","

   70 typed_id: ID "::" type

   71 type: type_id
   72     | type_var
   73     | "(" type_list0 ")" "->" type
   74     | "(" ")" "->" type

   75 type_id0: ID "of" "[" type_list0 "]"
   76         | ID "of" type_list1

   77 type_id: type_id0
   78        | ID

   79 type_var: "@type_var"

   80 type_list0: type __27

   81 type_list1: type

   82 target: simple_target
   83       | typed_id

   84 right_side: tuple_ext_expr
   85           | assign

   86 plist: expression __25 ","

   87 expression_list0: expression_list
   88                 | %empty

   89 expression_list: expression __25

   90 tuple_ext_expr: expression
   91               | expression "," __30 __20

   92 expression0: expression
   93            | %empty

   94 expression: root_expr

   95 function_call: type_id0 "(" expression_list0 ")"
   96              | type_id0 "(" expression_list0 "," ")"
   97              | primary_expr "(" expression_list0 ")"
   98              | primary_expr "(" expression_list0 "," ")"

   99 root_expr: if_expr
  100          | boolean_expr

  101 if_expr: boolean_expr "if" root_expr "else" root_expr

  102 boolean_expr: arith_expr
  103             | compare_expr
  104             | boolean_expr "and" boolean_expr
  105             | boolean_expr "or" boolean_expr

  106 compare_expr: lcompare_expr "<" arith_expr
  107             | lcompare_expr ">" arith_expr
  108             | lcompare_expr "<=" arith_expr
  109             | lcompare_expr ">=" arith_expr
  110             | lcompare_expr "==" arith_expr
  111             | lcompare_expr "!=" arith_expr
  112             | lcompare_expr "in" arith_expr
  113             | lcompare_expr "is" arith_expr
  114             | lcompare_expr ISNOT arith_expr
  115             | lcompare_expr NOTIN arith_expr

  116 lcompare_expr: arith_expr
  117              | lcompare_expr "<" arith_expr
  118              | lcompare_expr ">" arith_expr
  119              | lcompare_expr "<=" arith_expr
  120              | lcompare_expr ">=" arith_expr
  121              | lcompare_expr "==" arith_expr
  122              | lcompare_expr "!=" arith_expr
  123              | lcompare_expr "in" arith_expr
  124              | lcompare_expr "is" arith_expr
  125              | lcompare_expr ISNOT arith_expr
  126              | lcompare_expr NOTIN arith_expr

  127 arith_expr: unary_expr
  128           | arith_expr "+" arith_expr
  129           | arith_expr "-" arith_expr
  130           | arith_expr "*" arith_expr
  131           | arith_expr "/" arith_expr
  132           | arith_expr "//" arith_expr
  133           | arith_expr "%" arith_expr

  134 unary_expr: expo_expr
  135           | "+" unary_expr
  136           | "-" unary_expr
  137           | "not" unary_expr

  138 expo_expr: primary_expr
  139          | expo_expr "**" expo_expr

  140 primary_expr: INT_LITERAL
  141             | simple_target
  142             | str_expr
  143             | dict
  144             | "(" ")"
  145             | "[" "]"
  146             | "(" expression "," __33 __22 ")"
  147             | "[" expression __31 __21 "]"
  148             | "(" root_expr ")"
  149             | function_call

  150 simple_target: ID
  151              | primary_expr "." ID
  152              | primary_expr "[" tuple_ext_expr "]"
  153              | primary_expr "[" expression0 ":" expression0 "]"

  154 pair: expression ":" expression

  155 dict: "{" __24 __17 "}"

  156 str_expr: STRING
  157         | RAWSTRING
  158         | str_expr RAWSTRING
  159         | str_expr STRING

  160 __0: pair NEWLINE ","
  161    | pair "," __23

  162 __1: statement __11
  163    | control_structure
  164    | definition
  165    | classdef
  166    | NEWLINE

  167 __2: statement __11
  168    | control_structure
  169    | definition
  170    | NEWLINE

  171 __3: statement __11
  172    | control_structure
  173    | NEWLINE

  174 __4: statement __12
  175    | control_structure
  176    | definition
  177    | classdef
  178    | NEWLINE

  179 __5: statement __12
  180    | control_structure
  181    | definition
  182    | NEWLINE

  183 __6: statement __12
  184    | control_structure
  185    | NEWLINE

  186 __7: typed_id
  187    | ID

  188 __8: typed_id
  189    | ID

  190 __9: "," target
  191    | __9 "," target

  192 __10: "," target
  193     | __10 "," target

  194 __11: NEWLINE
  195     | ";"

  196 __12: NEWLINE
  197     | ";"

  198 __13: __4
  199     | __13 __1

  200 __14: __5
  201     | __14 __2

  202 __15: __6
  203     | __15 __3

  204 __16: %empty
  205     | __16 "," __7

  206 __17: %empty
  207     | pair

  208 __18: %empty
  209     | ","

  210 __19: %empty
  211     | ";"

  212 __20: %empty
  213     | expression

  214 __21: %empty
  215     | ","

  216 __22: %empty
  217     | expression

  218 __23: %empty
  219     | NEWLINE

  220 __24: %empty
  221     | __24 __0

  222 __25: %empty
  223     | __25 "," expression

  224 __26: %empty
  225     | __26 ";" statement

  226 __27: %empty
  227     | __27 "," type

  228 __28: %empty
  229     | __28 "," type_var

  230 __29: %empty
  231     | ";"

  232 __30: %empty
  233     | __30 expression ","

  234 __31: %empty
  235     | __31 "," expression

  236 __32: %empty
  237     | ","

  238 __33: %empty
  239     | __33 expression ","

  240 __34: %empty
  241     | ";"

  242 __35: %empty
  243     | ";"

  244 __36: %empty
  245     | ";"


Terminals, with rules where they appear

$end (0) 0
"%" (37) 133
"(" (40) 12 13 14 15 16 17 18 19 64 73 74 95 96 97 98 144 146 148
")" (41) 12 13 14 15 16 17 18 19 64 73 74 95 96 97 98 144 146 148
"*" (42) 130
"+" (43) 128 135
"," (44) 55 56 61 69 86 91 96 98 146 160 161 190 191 192 193 205 209
    215 223 227 229 233 235 237 239
"-" (45) 129 136
"." (46) 151
"/" (47) 131
":" (58) 7 8 9 10 12 13 14 15 16 17 18 19 36 37 38 39 40 41 42 43 44
    45 47 48 49 50 51 52 153 154
";" (59) 195 197 211 225 231 241 243 245
"<" (60) 106 117
"=" (61) 59
">" (62) 107 118
"[" (91) 7 9 66 67 68 75 145 147 152 153
"]" (93) 7 9 66 67 68 75 145 147 152 153
"{" (123) 155
"}" (125) 155
error (256)
ID (258) 7 8 9 10 12 13 14 15 16 17 18 19 70 75 76 78 150 151 187 189
"@println" (259)
EMPTY (260)
"@expr_list" (261)
"@module" (262)
"@binop" (263)
"@unop" (264)
INDENT (265) 7 8 12 13 17 19 37 38 40 41 44 45 49 50 52
DEDENT (266) 7 8 12 13 17 19 37 38 40 41 44 45 49 50 52
"@stmt_list" (267)
"@print" (268)
"@return" (269)
"@break" (270)
"@continue" (271)
"@native" (272)
"@if" (273)
"@for" (274)
"@while" (275)
"@block" (276)
"@assign" (277)
"@target_list" (278)
"@attributeref" (279)
"@subscription" (280)
"@slicing" (281)
"@type" (282)
"@typed_id" (283)
"@type_var" (284) 79
"@type_list" (285)
"@type_formals_list" (286)
"@formals_list" (287)
"@function_type" (288)
"@def" (289)
"@class" (290)
"@compare" (291)
"@left_compare" (292)
"@and" (293)
"@or" (294)
"@if_expr" (295)
"@tuple" (296)
"@list_display" (297)
"@dict_display" (298)
"@pair" (299)
"@call" (300)
"**" (301) 139
ISNOT (302) 114 125
NOTIN (303) 115 126
"&&" (304)
"||" (305)
"!=" (306) 111 122
"->" (307) 73 74
"//" (308) 132
"::" (309) 12 14 18 19 70
"<=" (310) 108 119
"==" (311) 110 121
">=" (312) 109 120
">>" (313) 54 55 56
"and" (314) 104
"break" (315) 30
"class" (316) 7 8 9 10
"continue" (317) 31
"def" (318) 12 13 14 15 16 17 18 19
"elif" (319) 47 48 49 50
"else" (320) 51 52 101
"for" (321) 36 37 38
"if" (322) 42 43 44 45 101
"in" (323) 36 37 38 112 123
"is" (324) 113 124
"native" (325) 53
"not" (326) 137
"of" (327) 7 9 75 76
"or" (328) 105
"pass" (329) 28
"print" (330) 54 55 56 57 58
"return" (331) 29
"while" (332) 39 40 41
BADSTRING (333)
BLANK_LINE (334)
END_OF_FILE (335)
INDENTATION (336)
INT_LITERAL (337) 140
NEWLINE (338) 7 8 9 10 12 13 14 15 16 17 18 19 36 37 38 39 40 41 42
    43 44 45 47 48 49 50 51 52 160 166 170 173 178 182 185 194 196
    219
RAWSTRING (339) 157 158
STRING (340) 53 156 159
UNUSED_KEYWORD (341)


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
program (106)
    on left: 1, on right: 0
stmt_list (107)
    on left: 2 3, on right: 1
stmt_list0 (108)
    on left: 4 5, on right: 37 38 40 41 44 45 49 50 52
statement (109)
    on left: 6, on right: 24 35 162 167 171 174 179 183 225
classdef (110)
    on left: 7 8 9 10, on right: 165 177
type_formals (111)
    on left: 11, on right: 7 9
definition (112)
    on left: 12 13 14 15 16 17 18 19, on right: 164 169 176 181
formals (113)
    on left: 20 21, on right: 12 13 14 15 16 17 18 19
block (114)
    on left: 22 23, on right: 7 8 12 13
semi_block (115)
    on left: 24, on right: 9 10 14 15
basic_statement (116)
    on left: 25 26 27 28 29 30 31, on right: 6
control_structure (117)
    on left: 32 33 34, on right: 163 168 172 175 180 184
semi_stmt_list (118)
    on left: 35, on right: 36 39 42 43 47 48 51
for_loop (119)
    on left: 36 37 38, on right: 32
while_loop (120)
    on left: 39 40 41, on right: 33
if_stmt (121)
    on left: 42 43 44 45, on right: 34
elif_stmts (122)
    on left: 46 47 48 49 50, on right: 43 45 48 49
else_stmt (123)
    on left: 51 52, on right: 38 41 46
native_stmt (124)
    on left: 53, on right: 16 17 18 19
print_stmt (125)
    on left: 54 55 56 57 58, on right: 25
assign (126)
    on left: 59, on right: 26 85
target_list (127)
    on left: 60 61 62 63 64 65, on right: 36 37 38 59 64
target_list_br (128)
    on left: 66 67 68, on right: 65
tlist (129)
    on left: 69, on right: 62 66
typed_id (130)
    on left: 70, on right: 83 186 188
type (131)
    on left: 71 72 73 74, on right: 12 14 18 19 70 73 74 80 81 227
type_id0 (132)
    on left: 75 76, on right: 77 95 96
type_id (133)
    on left: 77 78, on right: 71
type_var (134)
    on left: 79, on right: 11 72 229
type_list0 (135)
    on left: 80, on right: 73 75
type_list1 (136)
    on left: 81, on right: 76
target (137)
    on left: 82 83, on right: 60 61 63 67 68 69 190 191 192 193
right_side (138)
    on left: 84 85, on right: 59
plist (139)
    on left: 86, on right: 56 58
expression_list0 (140)
    on left: 87 88, on right: 57 95 96 97 98
expression_list (141)
    on left: 89, on right: 55 87
tuple_ext_expr (142)
    on left: 90 91, on right: 36 37 38 84 152
expression0 (143)
    on left: 92 93, on right: 29 153
expression (144)
    on left: 94, on right: 27 39 40 41 42 43 44 45 47 48 49 50 54 55
    56 86 89 90 91 92 146 147 154 213 217 223 233 235 239
function_call (145)
    on left: 95 96 97 98, on right: 149
root_expr (146)
    on left: 99 100, on right: 94 101 148
if_expr (147)
    on left: 101, on right: 99
boolean_expr (148)
    on left: 102 103 104 105, on right: 100 101 104 105
compare_expr (149)
    on left: 106 107 108 109 110 111 112 113 114 115, on right: 103
lcompare_expr (150)
    on left: 116 117 118 119 120 121 122 123 124 125 126, on right:
    106 107 108 109 110 111 112 113 114 115 117 118 119 120 121 122
    123 124 125 126
arith_expr (151)
    on left: 127 128 129 130 131 132 133, on right: 102 106 107 108
    109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
    125 126 128 129 130 131 132 133
unary_expr (152)
    on left: 134 135 136 137, on right: 127 135 136 137
expo_expr (153)
    on left: 138 139, on right: 134 139
primary_expr (154)
    on left: 140 141 142 143 144 145 146 147 148 149, on right: 97
    98 138 151 152 153
simple_target (155)
    on left: 150 151 152 153, on right: 82 141
pair (156)
    on left: 154, on right: 160 161 207
dict (157)
    on left: 155, on right: 143
str_expr (158)
    on left: 156 157 158 159, on right: 142 158 159
__0 (159)
    on left: 160 161, on right: 221
__1 (160)
    on left: 162 163 164 165 166, on right: 199
__2 (161)
    on left: 167 168 169 170, on right: 201
__3 (162)
    on left: 171 172 173, on right: 203
__4 (163)
    on left: 174 175 176 177 178, on right: 198
__5 (164)
    on left: 179 180 181 182, on right: 200
__6 (165)
    on left: 183 184 185, on right: 202
__7 (166)
    on left: 186 187, on right: 205
__8 (167)
    on left: 188 189, on right: 20
__9 (168)
    on left: 190 191, on right: 63 69 191
__10 (169)
    on left: 192 193, on right: 68 193
__11 (170)
    on left: 194 195, on right: 162 167 171
__12 (171)
    on left: 196 197, on right: 174 179 183
__13 (172)
    on left: 198 199, on right: 2 199
__14 (173)
    on left: 200 201, on right: 22 201
__15 (174)
    on left: 202 203, on right: 4 203
__16 (175)
    on left: 204 205, on right: 20 205
__17 (176)
    on left: 206 207, on right: 155
__18 (177)
    on left: 208 209, on right: 20
__19 (178)
    on left: 210 211, on right: 24 35
__20 (179)
    on left: 212 213, on right: 91
__21 (180)
    on left: 214 215, on right: 147
__22 (181)
    on left: 216 217, on right: 146
__23 (182)
    on left: 218 219, on right: 161
__24 (183)
    on left: 220 221, on right: 155 221
__25 (184)
    on left: 222 223, on right: 86 89 223
__26 (185)
    on left: 224 225, on right: 24 35 225
__27 (186)
    on left: 226 227, on right: 80 227
__28 (187)
    on left: 228 229, on right: 11 229
__29 (188)
    on left: 230 231, on right: 19
__30 (189)
    on left: 232 233, on right: 91 233
__31 (190)
    on left: 234 235, on right: 147 235
__32 (191)
    on left: 236 237, on right: 67
__33 (192)
    on left: 238 239, on right: 146 239
__34 (193)
    on left: 240 241, on right: 16
__35 (194)
    on left: 242 243, on right: 17
__36 (195)
    on left: 244 245, on right: 18


State 0

    0 $accept: . program $end

    ID           shift, and go to state 1
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 4
    "["          shift, and go to state 5
    "break"      shift, and go to state 6
    "class"      shift, and go to state 7
    "continue"   shift, and go to state 8
    "def"        shift, and go to state 9
    "for"        shift, and go to state 10
    "if"         shift, and go to state 11
    "not"        shift, and go to state 12
    "pass"       shift, and go to state 13
    "print"      shift, and go to state 14
    "return"     shift, and go to state 15
    "while"      shift, and go to state 16
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    NEWLINE      shift, and go to state 19
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    $default  reduce using rule 3 (stmt_list)

    program            go to state 22
    stmt_list          go to state 23
    statement          go to state 24
    classdef           go to state 25
    definition         go to state 26
    basic_statement    go to state 27
    control_structure  go to state 28
    for_loop           go to state 29
    while_loop         go to state 30
    if_stmt            go to state 31
    print_stmt         go to state 32
    assign             go to state 33
    target_list        go to state 34
    target_list_br     go to state 35
    tlist              go to state 36
    typed_id           go to state 37
    type_id0           go to state 38
    target             go to state 39
    expression         go to state 40
    function_call      go to state 41
    root_expr          go to state 42
    if_expr            go to state 43
    boolean_expr       go to state 44
    compare_expr       go to state 45
    lcompare_expr      go to state 46
    arith_expr         go to state 47
    unary_expr         go to state 48
    expo_expr          go to state 49
    primary_expr       go to state 50
    simple_target      go to state 51
    dict               go to state 52
    str_expr           go to state 53
    __4                go to state 54
    __13               go to state 55


State 1

   70 typed_id: ID . "::" type
   75 type_id0: ID . "of" "[" type_list0 "]"
   76         | ID . "of" type_list1
  150 simple_target: ID .

    "::"  shift, and go to state 56
    "of"  shift, and go to state 57

    $default  reduce using rule 150 (simple_target)


State 2

  135 unary_expr: "+" . unary_expr

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    type_id0       go to state 38
    function_call  go to state 41
    unary_expr     go to state 61
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 3

  136 unary_expr: "-" . unary_expr

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    type_id0       go to state 38
    function_call  go to state 41
    unary_expr     go to state 63
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 4

   64 target_list: "(" . target_list ")"
  144 primary_expr: "(" . ")"
  146             | "(" . expression "," __33 __22 ")"
  148             | "(" . root_expr ")"

    ID           shift, and go to state 1
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 4
    ")"          shift, and go to state 64
    "["          shift, and go to state 5
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    target_list     go to state 65
    target_list_br  go to state 35
    tlist           go to state 36
    typed_id        go to state 37
    type_id0        go to state 38
    target          go to state 39
    expression      go to state 66
    function_call   go to state 41
    root_expr       go to state 67
    if_expr         go to state 43
    boolean_expr    go to state 44
    compare_expr    go to state 45
    lcompare_expr   go to state 46
    arith_expr      go to state 47
    unary_expr      go to state 48
    expo_expr       go to state 49
    primary_expr    go to state 50
    simple_target   go to state 51
    dict            go to state 52
    str_expr        go to state 53


State 5

   66 target_list_br: "[" . tlist "]"
   67               | "[" . target __32 "]"
   68               | "[" . target __10 "]"
  145 primary_expr: "[" . "]"
  147             | "[" . expression __31 __21 "]"

    ID           shift, and go to state 1
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "]"          shift, and go to state 68
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    tlist          go to state 69
    typed_id       go to state 37
    type_id0       go to state 38
    target         go to state 70
    expression     go to state 71
    function_call  go to state 41
    root_expr      go to state 42
    if_expr        go to state 43
    boolean_expr   go to state 44
    compare_expr   go to state 45
    lcompare_expr  go to state 46
    arith_expr     go to state 47
    unary_expr     go to state 48
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 51
    dict           go to state 52
    str_expr       go to state 53


State 6

   30 basic_statement: "break" .

    $default  reduce using rule 30 (basic_statement)


State 7

    7 classdef: "class" . ID "of" "[" type_formals "]" ":" NEWLINE INDENT block DEDENT
    8         | "class" . ID ":" NEWLINE INDENT block DEDENT
    9         | "class" . ID "of" "[" type_formals "]" ":" semi_block NEWLINE
   10         | "class" . ID ":" semi_block NEWLINE

    ID  shift, and go to state 72


State 8

   31 basic_statement: "continue" .

    $default  reduce using rule 31 (basic_statement)


State 9

   12 definition: "def" . ID "(" formals ")" "::" type ":" NEWLINE INDENT block DEDENT
   13           | "def" . ID "(" formals ")" ":" NEWLINE INDENT block DEDENT
   14           | "def" . ID "(" formals ")" "::" type ":" semi_block NEWLINE
   15           | "def" . ID "(" formals ")" ":" semi_block NEWLINE
   16           | "def" . ID "(" formals ")" ":" native_stmt __34 NEWLINE
   17           | "def" . ID "(" formals ")" ":" NEWLINE INDENT native_stmt __35 NEWLINE DEDENT
   18           | "def" . ID "(" formals ")" "::" type ":" native_stmt __36 NEWLINE
   19           | "def" . ID "(" formals ")" "::" type ":" NEWLINE INDENT native_stmt __29 NEWLINE DEDENT

    ID  shift, and go to state 73


State 10

   36 for_loop: "for" . target_list "in" tuple_ext_expr ":" semi_stmt_list NEWLINE
   37         | "for" . target_list "in" tuple_ext_expr ":" NEWLINE INDENT stmt_list0 DEDENT
   38         | "for" . target_list "in" tuple_ext_expr ":" NEWLINE INDENT stmt_list0 DEDENT else_stmt

    ID           shift, and go to state 1
    "("          shift, and go to state 4
    "["          shift, and go to state 5
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    target_list     go to state 74
    target_list_br  go to state 35
    tlist           go to state 36
    typed_id        go to state 37
    type_id0        go to state 38
    target          go to state 39
    function_call   go to state 41
    primary_expr    go to state 75
    simple_target   go to state 51
    dict            go to state 52
    str_expr        go to state 53


State 11

   42 if_stmt: "if" . expression ":" semi_stmt_list NEWLINE
   43        | "if" . expression ":" semi_stmt_list NEWLINE elif_stmts
   44        | "if" . expression ":" NEWLINE INDENT stmt_list0 DEDENT
   45        | "if" . expression ":" NEWLINE INDENT stmt_list0 DEDENT elif_stmts

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    type_id0       go to state 38
    expression     go to state 76
    function_call  go to state 41
    root_expr      go to state 42
    if_expr        go to state 43
    boolean_expr   go to state 44
    compare_expr   go to state 45
    lcompare_expr  go to state 46
    arith_expr     go to state 47
    unary_expr     go to state 48
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 12

  137 unary_expr: "not" . unary_expr

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    type_id0       go to state 38
    function_call  go to state 41
    unary_expr     go to state 77
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 13

   28 basic_statement: "pass" .

    $default  reduce using rule 28 (basic_statement)


State 14

   54 print_stmt: "print" . ">>" expression
   55           | "print" . ">>" expression "," expression_list
   56           | "print" . ">>" expression "," plist
   57           | "print" . expression_list0
   58           | "print" . plist

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    ">>"         shift, and go to state 78
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    $default  reduce using rule 88 (expression_list0)

    type_id0          go to state 38
    plist             go to state 79
    expression_list0  go to state 80
    expression_list   go to state 81
    expression        go to state 82
    function_call     go to state 41
    root_expr         go to state 42
    if_expr           go to state 43
    boolean_expr      go to state 44
    compare_expr      go to state 45
    lcompare_expr     go to state 46
    arith_expr        go to state 47
    unary_expr        go to state 48
    expo_expr         go to state 49
    primary_expr      go to state 50
    simple_target     go to state 62
    dict              go to state 52
    str_expr          go to state 53


State 15

   29 basic_statement: "return" . expression0

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    $default  reduce using rule 93 (expression0)

    type_id0       go to state 38
    expression0    go to state 83
    expression     go to state 84
    function_call  go to state 41
    root_expr      go to state 42
    if_expr        go to state 43
    boolean_expr   go to state 44
    compare_expr   go to state 45
    lcompare_expr  go to state 46
    arith_expr     go to state 47
    unary_expr     go to state 48
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 16

   39 while_loop: "while" . expression ":" semi_stmt_list NEWLINE
   40           | "while" . expression ":" NEWLINE INDENT stmt_list0 DEDENT
   41           | "while" . expression ":" NEWLINE INDENT stmt_list0 DEDENT else_stmt

    ID           shift, and go to state 58
    "+"          shift, and go to state 2
    "-"          shift, and go to state 3
    "("          shift, and go to state 59
    "["          shift, and go to state 60
    "not"        shift, and go to state 12
    "{"          shift, and go to state 17
    INT_LITERAL  shift, and go to state 18
    RAWSTRING    shift, and go to state 20
    STRING       shift, and go to state 21

    type_id0       go to state 38
    expression     go to state 85
    function_call  go to state 41
    root_expr      go to state 42
    if_expr        go to state 43
    boolean_expr   go to state 44
    compare_expr   go to state 45
    lcompare_expr  go to state 46
    arith_expr     go to state 47
    unary_expr     go to state 48
    expo_expr      go to state 49
    primary_expr   go to state 50
    simple_target  go to state 62
    dict           go to state 52
    str_expr       go to state 53


State 17

  155 dict: "{" . __24 __17 "}"

    $default  reduce using rule 220 (__24)

    __24  go to state 86


State 18

  140 primary_expr: INT_LITERAL .

    $default  reduce using rule 140 (primary_expr)


State 19

  178 __4: NEWLINE .

    $default  reduce using rule 178 (__4)


State 20

  157 str_expr: RAWSTRING .

    $default  reduce using rule 157 (str_expr)


State 21

  156 str_expr: STRING .

    $default  reduce using rule 156 (str_expr)


State 22

    0 $accept: program . $end

    $end  shift, and go to state 87


State 23

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


State 24

  174 __4: statement . __12

    ";"      shift, and go to state 88
    NEWLINE  shift, and go to state 89

    __12  go to state 90


State 25

  177 __4: classdef .

    $default  reduce using rule 177 (__4)


State 26

  176 __4: definition .

    $default  reduce using rule 176 (__4)


State 27

    6 statement: basic_statement .

    $default  reduce using rule 6 (statement)


State 28

  175 __4: control_structure .

    $default  reduce using rule 175 (__4)


State 29

   32 control_structure: for_loop .

    $default  reduce using rule 32 (control_structure)


State 30

   33 control_structure: while_loop .

    $default  reduce using rule 33 (control_structure)


State 31

   34 control_structure: if_stmt .

    $default  reduce using rule 34 (control_structure)


State 32

   25 basic_statement: print_stmt .

    $default  reduce using rule 25 (basic_statement)


State 33

   26 basic_statement: assign .

    $default  reduce using rule 26 (basic_statement)


State 34

   59 assign: target_list . "=" right_side

    "="  shift, and go to state 91


State 35

   65 target_list: target_list_br .

    $default  reduce using rule 65 (target_list)


State 36

   62 target_list: tlist .

    $default  reduce using rule 62 (target_list)


State 37

   83 target: typed_id .

    $default  reduce using rule 83 (target)


State 38

   95 function_call: type_id0 . "(" expression_list0 ")"
   96              | type_id0 . "(" expression_list0 "," ")"

    "("  shift, and go to state 92


State 39

   60 target_list: target .
   61            | target . ","
   63            | target . __9
   69 tlist: target . __9 ","

    ","  shift, and go to state 93

    $default  reduce using rule 60 (target_list)

    __9  go to state 94


State 40
